# cieft

./: .gitignore  CMakeLists.txt  README.md
exercises/: two_layer_nn.cpp  two_layer_nn_sample.cpp  two_token_attention.cpp
scripts/: check_RoPE_metadata_keys.py
src/: aligned_alloc.h  dequant_q4_k.cpp  dequant_q6_k.cpp  ggml_fp16.h  ggml_quants.h  gguf.cpp  gguf.h  gguf_loader.cpp  gguf_loader.h  inspect.cpp  layer0.cpp  layer0.h  layer0_step.cpp  mapped_file.h  reader.h  smoke_load.cpp  weights.cpp  weights.h
src/kernels/: math.h  matvec.h  rmsnorm.h  rope.h  softmax.h
